--- a/src/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
+++ b/src/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
@@ -8,8 +8,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="PortingAssistant.Client.Telemetry" Version="2.3.3-alpha-gc19771ce32" />
-		<PackageReference Include="PortingAssistant.Client.Common" Version="2.3.3-alpha-gc19771ce32" />
+		<PackageReference Include="PortingAssistant.Client.Telemetry" Version="2.3.4-alpha-gaa5f33e49d" />
+		<PackageReference Include="PortingAssistant.Client.Common" Version="2.3.4-alpha-gaa5f33e49d" />
 	</ItemGroup>
 
 </Project>
