--- a/src/PortingAssistantVSExtensionClient2022/Resources/porting-assistant-config.json
+++ b/src/PortingAssistantVSExtensionClient2022/Resources/porting-assistant-config.json
@@ -6,10 +6,33 @@
       "GitHubEndpoint": "https://raw.githubusercontent.com/aws/porting-assistant-dotnet-datastore/master/"
     }
   },
+  "SupportedVersionConfiguration": {
+    "FormatVersion": "1.0",
+    "Versions": [
+      {
+        "DisplayName": ".NET 6 (Microsoft LTS)",
+        "VersionKey": "net6.0",
+        "RequiredVisualStudioVersion": "17.0.0",
+        "RecommendOrder": 1
+      },
+      {
+        "DisplayName": ".NET Core 3.1 (Microsoft LTS)",
+        "VersionKey": "netcoreapp3.1",
+        "RequiredVisualStudioVersion": "",
+        "RecommendOrder": 2
+      },
+      {
+        "DisplayName": ".NET 5 (Microsoft out of support)",
+        "VersionKey": "net5.0",
+        "RequiredVisualStudioVersion": "",
+        "RecommendOrder": 3
+      }
+    ]
+  },
   "TelemetryConfiguration": {
-    "InvokeUrl": "",
-    "Region": "",
-    "ServiceName": "",
+    "InvokeUrl": "https://8cvsix1u33.execute-api.us-west-2.amazonaws.com/gamma",
+    "Region": "us-west-2",
+    "ServiceName": "encore",
     "Description": "Porting Assistant for .NET Extension",
     "Suffix": [
       ".log",
