--- a/src/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
+++ b/src/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
@@ -6,10 +6,9 @@
 	<PropertyGroup>
 		<RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
 	</PropertyGroup>
-
 	<ItemGroup>
-		<PackageReference Include="PortingAssistant.Client.Telemetry" Version="2.4.2-alpha-g7b80e67d7c" />
-		<PackageReference Include="PortingAssistant.Client.Common" Version="2.4.2-alpha-g7b80e67d7c" />
+	  <PackageReference Include="PortingAssistant.Client.Common" Version="2.6.2-alpha-gd07412b275" />
+	  <PackageReference Include="PortingAssistant.Client.Telemetry" Version="2.6.2-alpha-gd07412b275" />
 	</ItemGroup>
 
 </Project>
