--- a/src/PortingAssistantVSExtensionClient2022/PortingAssistantVSExtensionClient2022.csproj
+++ b/src/PortingAssistantVSExtensionClient2022/PortingAssistantVSExtensionClient2022.csproj
@@ -85,6 +85,9 @@
     <PackageReference Include="AWSSDK.Core">
       <Version>3.7.5.2</Version>
     </PackageReference>
+    <PackageReference Include="AWSSDK.S3">
+      <Version>3.7.7.21</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.0.31902.203" ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
