--- a/src/PortingAssistantVSExtensionClient2019/PortingAssistantVSExtensionClient2019.csproj
+++ b/src/PortingAssistantVSExtensionClient2019/PortingAssistantVSExtensionClient2019.csproj
@@ -81,10 +81,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AWSSDK.APIGateway">
-      <Version>3.7.2.11</Version>
+      <Version>3.7.2.49</Version>
     </PackageReference>
-    <PackageReference Include="AWSSDK.Core">
-      <Version>3.7.3.5</Version>
+    <PackageReference Include="AWSSDK.S3">
+      <Version>3.7.6</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.9.31025.194" ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -94,7 +94,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>13.0.1</Version>
+      <Version>12.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
