--- a/src/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
+++ b/src/PortingAssistantExtensionTelemetry/PortingAssistantExtensionTelemetry.csproj
@@ -8,8 +8,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="PortingAssistant.Client.Telemetry" Version="2.4.2-alpha-g7b80e67d7c" />
-		<PackageReference Include="PortingAssistant.Client.Common" Version="2.4.2-alpha-g7b80e67d7c" />
+		<PackageReference Include="PortingAssistant.Client.Telemetry" Version="2.7.1" />
+		<PackageReference Include="PortingAssistant.Client.Common" Version="2.7.1" />
 	</ItemGroup>
 
 </Project>
