--- a/src/PortingAssistantVSExtensionClient2019/PortingAssistantVSExtensionClient2019.csproj
+++ b/src/PortingAssistantVSExtensionClient2019/PortingAssistantVSExtensionClient2019.csproj
@@ -86,6 +86,9 @@
     <PackageReference Include="AWSSDK.Core">
       <Version>3.7.3.5</Version>
     </PackageReference>
+    <PackageReference Include="AWSSDK.S3">
+      <Version>3.7.6</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.9.31025.194" ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
