--- a/tst/PortingAssistantExtensionUITests_FlaUI/appsettings.json
+++ b/tst/PortingAssistantExtensionUITests_FlaUI/appsettings.json
@@ -4,6 +4,8 @@
     "assess-solution-path2": "value1",
     "pa-extension-2019-download-url": "https://awspa.gallerycdn.vsassets.io/extensions/awspa/awsportingassistant/1.1.9/1650057135610/PortingAssistant.Extension-2019-1.1.9-release.vsix",
     "pa-extension-2019-local-path": "C:\\PAExtension2019.vsix",
+    "pa-extension-2022-download-url": "https://awspa.gallerycdn.vsassets.io/extensions/awspa/awsportingassistant2022/1.1.10/1654554655502/PortingAssistant.Extension-2022-1.1.10-release.vsix",
+    "pa-extension-2022-local-path": "C:\\PAExtension2022.vsix",
     "vsixinstaller-path": "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Professional\\Common7\\IDE\\VSIXInstaller.exe"
   },
   "aws": {
@@ -12,7 +14,7 @@
   },
   "vslocation": {
     "2019": "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Professional\\Common7\\IDE\\devenv.exe",
-    "2022": ""
+    "2022": "C:\\Program Files\\Microsoft Visual Studio\\2022\\Professional\\Common7\\IDE\\devenv.exe"
   }
 
 }
